Liberando o CORS para PUT, DELETE